# shacl-issues

./: .gitignore  README.md  pyproject.toml
ontologies/brick/: Brick.ttl  currency.ttl  dimensionvector.ttl  quantitykind.ttl  qudtfacade.ttl  qudtoverlay.ttl  qudtschema.ttl  qudtsou.ttl  unit.ttl
scripts/: build-topbraid-shacl.sh  update_ontologies.sh
testcases/nested_qualified_syntax/: data.ttl  shapes.ttl
testcases/nested_qualified_syntax/pyshacl/: report.ttl  report.txt
testcases/nested_qualified_syntax/topquadrant_shacl/: report.ttl
testcases/or_syntax/: data.ttl  shapes.ttl
testcases/qualified_min/: data.ttl  shapes.ttl
testcases/qualified_min/pyshacl/: report.ttl  report.txt
testcases/qualified_min/topquadrant_shacl/: report.ttl
testcases/sh_or_ambiguity/: README.md  data.ttl  shapes.ttl
testcases/sh_or_ambiguity/topquadrant_shacl/: report.ttl
testshacl/: pyshacl.py  topquadrant_shacl.py
