[tool.poetry]
name = "shacl-issues"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"
readme = "README.md"
packages = [{include = "shacl_issues"}]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^6.1.3"
pyshacl = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
